starmap module
