# src/app/services/swagger/api/api.ts
@@ -6,12 +6,16 @@ export * from './chatApi.service';
 import { ChatApiService } from './chatApi.service';
 export * from './constructionApi.service';
 import { ConstructionApiService } from './constructionApi.service';
+export * from './fleetApi.service';
+import { FleetApiService } from './fleetApi.service';
 export * from './jobApi.service';
 import { JobApiService } from './jobApi.service';
 export * from './planetApi.service';
 import { PlanetApiService } from './planetApi.service';
 export * from './shipyardApi.service';
 import { ShipyardApiService } from './shipyardApi.service';
+export * from './starMapApi.service';
+import { StarMapApiService } from './starMapApi.service';
 export * from './userApi.service';
 import { UserApiService } from './userApi.service';
-export const APIS = [AuthApiService, BuildingApiService, ChatApiService, ConstructionApiService, JobApiService, PlanetApiService, ShipyardApiService, UserApiService];
+export const APIS = [AuthApiService, BuildingApiService, ChatApiService, ConstructionApiService, FleetApiService, JobApiService, PlanetApiService, ShipyardApiService, StarMapApiService, UserApiService];
