# src/app/services/swagger/model/fleet.ts
@@ -1,0 +1,33 @@
+/**
+ * BoF REST API
+ * description
+ *
+ * OpenAPI spec version: 0.0.1
+ * Contact: bla@bla.com
+ *
+ * NOTE: This class is auto generated by the swagger code generator program.
+ * https://github.com/swagger-api/swagger-codegen.git
+ * Do not edit the class manually.
+ */
+import { FleetOrbit } from './fleetOrbit';
+import { Move } from './move';
+import { UserJson } from './userJson';
+import { WarShip } from './warShip';
+
+export interface Fleet { 
+    /**
+     * The id.
+     */
+    idFleet: number;
+    move?: Move;
+    /**
+     * The name of the fleet
+     */
+    name: string;
+    orbit?: FleetOrbit;
+    owner: UserJson;
+    /**
+     * The fleet's individual war ships.
+     */
+    ships: Array<WarShip>;
+}
