# src/app/services/swagger/model/fleetOrbit.ts
@@ -1,0 +1,18 @@
+/**
+ * BoF REST API
+ * description
+ *
+ * OpenAPI spec version: 0.0.1
+ * Contact: bla@bla.com
+ *
+ * NOTE: This class is auto generated by the swagger code generator program.
+ * https://github.com/swagger-api/swagger-codegen.git
+ * Do not edit the class manually.
+ */
+import { Planet } from './planet';
+import { StarSystem } from './starSystem';
+
+export interface FleetOrbit { 
+    planet?: Planet;
+    system: StarSystem;
+}
