# src/app/services/swagger/model/models.ts
@@ -9,15 +9,19 @@ export * from './chatHistory';
 export * from './chatMessage';
 export * from './construction';
 export * from './electronicWarfare';
+export * from './fleet';
+export * from './fleetOrbit';
 export * from './frontendError';
 export * from './hull';
 export * from './jWT';
 export * from './job';
+export * from './move';
 export * from './orbit';
 export * from './passiveModule';
 export * from './planet';
 export * from './propulsion';
 export * from './research';
+export * from './researchLevel';
 export * from './shipClass';
 export * from './shipyardConstructionOrder';
 export * from './shipyardConstructionSelection';
@@ -27,4 +31,5 @@ export * from './supportFitting';
 export * from './userJson';
 export * from './userReq';
 export * from './validationResult';
+export * from './warShip';
 export * from './weapon';
