# src/app/services/swagger/model/warShip.ts
@@ -1,0 +1,26 @@
+/**
+ * BoF REST API
+ * description
+ *
+ * OpenAPI spec version: 0.0.1
+ * Contact: bla@bla.com
+ *
+ * NOTE: This class is auto generated by the swagger code generator program.
+ * https://github.com/swagger-api/swagger-codegen.git
+ * Do not edit the class manually.
+ */
+import { Planet } from './planet';
+import { ShipClass } from './shipClass';
+
+export interface WarShip { 
+    /**
+     * The fleet which this ship is part of.
+     */
+    idFleet: number;
+    /**
+     * The name of this individual ship.
+     */
+    name: string;
+    shipClass: ShipClass;
+    shipyard: Planet;
+}
